--- a/index.html
+++ b/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Broadway</title>
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
+    <div id=background>
+    <h1>Broadway Design</h1>
+      <ul class="list">
+        <li><p><a href="#topsection">Home</a></p></li>
+        <li><p><a href="#process">Process</a></p></li>
+        <li><p><a href="#work">Work</a></p></li>
+        <li><p><a href="#team">Team</a></p></li>
+        <li><p><a href="#contacts">Contact</a></p></li>
+      </ul>
+    </div>
+    <div id=process>
+      <h2>Our Process</h2>
+      <img src="./resources/Images/identify.svg">
+      <h3 class=title>Identify</h3>
+      <p class=details>We focus on the most important detials.</p>
+      <img src="./resources/Images/understand.svg">
+      <h3 class=title>Understand</h3>
+      <p class=details>We study our projects inside and out.</p>
+      <img src="./resources/Images/execute.svg">
+      <h3 class=title>Execute</h3>
+      <p class=details>We out everything we have into our work</p>
+    </div>
 
-    <p><a class="link" href="#">Download Excursion (Coming soon!)</a></p>
+    <div id=background>
+      <h1>Designed in New York</h1>
+    </div>
 
-    <p><video autoplay muted loop>
-      <source src="./resources/Videos/excursion.mp4">
-    </video></p>
+    <div id=work>
+      <h3 class="title">Portfolio</h3>
+      <p class="details">Coming Soon</p>
+    </div>
 
-    <h2>Your personal travel guide</h2>
+    <div id=team>
+      <h3 class="title">Team</h3>
+      <p class="details">We're Hiring</p>
+    </div>
 
-    <p class="middle">Excursion remembers places you like, and recommends new points of interest around you.</p>
-
-    <p><img src="./resources/Images/camp.jpg"></p>
-
-    <p><img src="./resources/Images/phone.png"></p>
-
-    <h2>Coming Soon for Iphone and Andriod</h2>
-
-    <p><a class="link" href="#">Download Excursion (Coming soon!)</a></p>
+    <div id=contact>
+      <h3 class "title">Contact</h3>
+      <p class "details">Phone: (555)-555-5555<br>
+        E-mail: test@example.com<br>
+        Twitter:@test</p>
+    </div>
 
     <div id=bottom>
-      <p>&copy; Excursion</p>
+      <p>&copy;Broadway2016 Home About Work Team Contact</p>
     </div>
 
   </body>
